# datasets-server-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/: async_usage.py  basic_usage.py  sample_rows_demo.py  search_and_filter.py
src/datasets_server/: __init__.py  __version__.py  _base.py  _headers.py  _http.py  async_client.py  client.py  constants.py  exceptions.py  models.py
src/datasets_server/cli/: __init__.py  _cli_utils.py  main.py
tests/: README.md  __init__.py  test_async_client.py  test_cli.py  test_client.py  test_headers.py  test_http.py  test_integration.py  test_models.py
