[project]
name = "datasets-server-py"
version = "0.1.0"
description = "Python client for Hugging Face Datasets Viewer API with sync/async support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Daniel van Strien", email = "daniel@huggingface.co"},
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "ty",
    "pre-commit",
    "respx>=0.20.0",
]
examples = [
    "pandas>=1.3.0",
    "rich",
]

[project.urls]
Homepage = "https://github.com/davanstrien/datasets-server-py"
Issues = "https://github.com/davanstrien/datasets-server-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datasets_server"]

[tool.ruff]
target-version = "py38"
line-length = 119

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ty.environment]
python-version = "3.8"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests",
]
addopts = "-m 'not integration'"  # Skip integration tests by default

[tool.coverage.run]
source = ["src/datasets_server"]
omit = ["tests/*"]